--- a/src/components/cogComponent/cogComponent.css
+++ b/src/components/cogComponent/cogComponent.css
@@ -1,10 +1,12 @@
 .cog__main {
     color: #587AB0;
     cursor: pointer;
+    height: 19px;
     left: 50%;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%) 
+    transform: translate(-50%, -50%);
+    width: 19px; 
 };
 
 .cog__main-item {
