--- a/src/components/stylingComponent/stylingComponent.css
+++ b/src/components/stylingComponent/stylingComponent.css
@@ -21,6 +21,6 @@
 
 .styling__module_underline {
     border-bottom: 1px solid #EAEAEA;
-    margin: 12px auto;
-    width: 95%;
+    margin: 0 auto;
+    width: 276px;
 }
