--- a/src/pages/mainPage.css
+++ b/src/pages/mainPage.css
@@ -1,12 +1,15 @@
 .description {
-    font-size: 14px;
+    font-size: 13px;
     line-height: 18px;
     margin: 0;
 }
 
 .description-light {
     color: #999999;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: normal;
+    font-style: normal;
     line-height: 15px;
     margin: 0;
+    width: 214px;
 }
